5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1728_2499.log
== TEST (2019-05-15 12:24:53) 
-- CODE:
import math
k=int(input("qtde. de termos"))
soma=0
e=0
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:39:06) 
-- CODE:
import math
k=int(input("qtde. de termos"))
soma=0
e=0

while(e<k):
	soma=soma+2**e
	e=e+1
	
-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:39:37) 
-- CODE:
import math
k=int(input("qtde. de termos"))
soma=0
e=0

while(e<k):
	soma=soma+2**e
	e=e+1
print(soma)
	
-- OUTPUT:
127
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:40:08) 
-- CODE:
import math
k=int(input("qtde. de termos"))
soma=0
e=0

while(e<k):
	soma=soma+2**e
	e=e+1
print(soma)
	
-- OUTPUT:
127
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:40:29) 
-- CODE:
import math
k=int(input("qtde. de termos"))
soma=0
e=0

while(e<k):
	soma=soma+2**e
	e=e+1
print(soma)
	
-- OUTPUT:
127
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:41:14) 
-- CODE:
import math
k=int(input("qtde. de termos"))
soma=0
e=0

while(e<k):
	soma=soma+2**e
	e=e+1
print(soma)
	
-- OUTPUT:
127
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:43:46) 
-- CODE:
import math
k=int(input("qtde. de termos"))
soma=0
e=0

while(e<k):
	soma=soma+2**e
	e=e+1
print(round(soma, k)
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:44:06) 
-- CODE:
import math
k=int(input("qtde. de termos"))
soma=0
e=0

while(e<k):
	soma=soma+2**e
	e=e+1
print(round(soma, 2)
	
-- ERROR:
File "XXXX", line 11
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 12:44:21) 
-- CODE:
import math
k=int(input("qtde. de termos"))
soma=0
e=0

while(e<k):
	soma=soma+2**e
	e=e+1
print(soma)
	
-- OUTPUT:
127
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:39:34) 
-- CODE:
import math
k=int(input("qtde. de termos"))
soma=0
e=0

while(e<k):
	soma=soma+2**e
	e=e+1
print(soma)
	
-- OUTPUT:
127
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:09:36) 
-- CODE:
import math
n = int(input("Informe a quantidade de termos: "))

resultado = 0
cont = 0

while cont <= n:
    resultado = resultado + 1/math.factorial(cont)
    cont = cont + 1

print(round(resultado,8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:09:49) 
-- CODE:
import math
n = int(input("Informe a quantidade de termos: "))

resultado = 0
cont = 0

while cont <= n:
    resultado = resultado + 1/math.factorial(cont)
    cont = cont + 1

print(round(resultado,8))
	
-- EXECUTION TIME:
0.200295
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:10:15) 
-- CODE:
import math
n = int(input())

resultado = 0
cont = 0

while cont <= n:
    resultado = resultado + 1/math.factorial(cont)
    cont = cont + 1

print(round(resultado,8))
	
-- EXECUTION TIME:
0.236592
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:11:53) 
-- CODE:
import math
n = int(input())

resultado = 0
cont = 0

while cont <= n:
    resultado = resultado + 1/math.factorial(cont)
    cont = cont + 1

print(round(resultado,8))
	
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:13:24) 
-- CODE:
import math
n = int(input())

resultado = 0
cont = 0

while cont <= n:
    resultado = resultado + 1/math.factorial(cont)
    cont = cont + 1

print(round(resultado,8))
-- EXECUTION TIME:
0.194983
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71825397
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71805556
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:41) 
-- CODE:
import math
n = int(input())

resultado = 0
cont = 0

while cont <= n:
    resultado = resultado + 1/math.factorial(cont)
cont = cont + 1

print(round(resultado,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:26) 
-- CODE:
import math
n = int(input())

resultado = 0
cont = 0

while cont <= n:
    resultado = resultado + 1/math.factorial(cont)
		cont = cont + 1

print(round(resultado,8))
-- ERROR:
File "XXXX", line 9
    cont = cont + 1
                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:52) 
-- CODE:
import math
n = int(input())

resultado = 0
cont = 0

while cont <= n:
	resultado = resultado + 1/math.factorial(cont)
	cont = cont + 1

print(round(resultado,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:26) 
-- CODE:
import math
n = int(input())

resultado = 0
cont = 0

while cont <= n:
	resultado = resultado + 1/math.factorial(cont)
	cont = cont + 1

print(round(resultado,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:41) 
-- CODE:
import math
n = int(input())

resultado = 0
cont = 0

while cont <= n:
	resultado = resultado + 1/math.factorial(cont)
	cont = cont + 1

print(round(resultado,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:54) 
-- CODE:
import math
n = int(input())

resultado = 0
cont = 0

while cont <= n:
	resultado = resultado + 1/math.factorial(cont)
	cont = cont + 1

print(round(resultado,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:22:00) 
-- CODE:
import math
n = int(input())

resultado = 0
cont = 0

while cont <= n:
	resultado = resultado + (1/math.factorial(cont))
	cont = cont + 1

print(round(resultado,8))
-- OUTPUT:
2.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:24:28) 
-- CODE:
import math
n = int(input("Informe a quantidade de termos: "))

resultado = 0
cont = 0

while cont < n:
    resultado += + 1/math.factorial(cont)
    cont = cont + 1

print(round(resultado,8))
-- EXECUTION TIME:
0.366265
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:25:01) 
-- CODE:
import math
n = int(input())

resultado = 0
cont = 0

while cont <= n:
    resultado = resultado + 1/math.factorial(cont)
cont = cont + 1

print(round(resultado,8))
-- EXECUTION TIME:
434.894
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:33:40) 
-- CODE:
import math
n = int(input("Informe a quantidade de termos: "))

resultado = 0
cont = 0

while cont < n:
    resultado += + 1/math.factorial(cont)
    cont = cont + 1

print(round(resultado,8))
-- EXECUTION TIME:
0.189614
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
